[1.0.94] Patch api config
